[package]
name = "aln-public-registry"
version = "1.0.0"
edition = "2021"
authors = ["ALN Sovereign Stack Contributors"]
description = "Public, mirrored registry of approved Sourzes and DOW artifacts"
license = "CC0-1.0"
repository = "https://github.com/aln-sovereign/aln-public-registry"
documentation = "https://docs.rs/aln-public-registry"
keywords = ["aln", "registry", "mirror", "sourze", "dow"]
categories = ["web-programming", "database", "cryptography"]

[dependencies]
aln-syntax-core = { version = "1.0", path = "../aln-syntax-core" }
sovereigntycore = { version = "1.0", path = "../sovereigntycore" }
zes-crypto-lib = { version = "1.0", path = "../zes-crypto-lib" }
row-rpm-ledger = { version = "1.0", path = "../row-rpm-ledger" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
sha3 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.11", features = ["json"] }
sled = "0.34"
bincode = "1.3"
ipfs-api = { version = "0.6", optional = true }
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"
serial_test = "2.0"
tokio-test = "0.4"

[lib]
name = "aln_public_registry"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "registry-server"
path = "src/bin/server.rs"

[[bin]]
name = "registry-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mirror-sync"
path = "src/bin/mirror_daemon.rs"

[[bench]]
name = "registry_throughput"
harness = false

[features]
default = ["std", "full-api"]
std = []
full-api = ["tokio", "axum", "reqwest"]
ipfs-support = ["ipfs-api"]
offline-mode = []

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "query_registry"
path = "examples/query_registry.rs"

[lints.clippy]
all = "deny"
pedantic = "warn"
unsafe_code = "deny"
